--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,15 @@
 {
   "version": 2,
-  "functions": {
-    "/index.py": {
-      "runtime": "python3.10"
+  "builds": [
+    {
+      "src": "index.py",
+      "use": "@vercel/python"
     }
-  },
+  ],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.py" }
+    {
+      "src": "/(.*)",
+      "dest": "/index.py"
+    }
   ]
 }
